# DatEngine-old

./: .gitignore  .gitmodules  CMakeLists.txt  Dat3dEngine.sln  Doxyfile  Plans.md
Dat3dEngine/: Dat3dEngine.vcxproj  Engine.props  (+3 more)
DatEngine/: CMakeLists.txt  EngineDetails.h.in
DatEngine/Editor/Profiling/: Profiler.h
DatEngine/Engine/: CMakeLists.txt  ReflectionMacros.h
DatEngine/Engine/AssetManager/: AssetManager.h  CMakeLists.txt
DatEngine/Engine/AssetManager/Archives/: DatArchive.h
DatEngine/Engine/AssetManager/Assets/: BaseAsset.h
DatEngine/Engine/AssetManager/Assets/Shaders/: FragShader.h  VertShader.h
DatEngine/Engine/AssetManager/Factories/: AssetFactory.h  FragShaderFactory.h  VertShaderFactory.h
DatEngine/Engine/AssetManager/Source/: AssetManager.cpp
DatEngine/Engine/Assets/: BaseAsset.h  BaseAssetFactory.h  CMakeLists.txt
DatEngine/Engine/Assets/AssetManager/: AssetManager.h
DatEngine/Engine/Assets/AssetManager/Source/: AssetManager.cpp
DatEngine/Engine/Assets/Shaders/: FragShader.h  FragShaderFactory.h  VertShader.h  VertShaderFactory.h
DatEngine/Engine/Config/: CMakeLists.txt  EngineConfig.gen  EngineConfig.h  EngineDetails.h.in
DatEngine/Engine/DataTypes/: CMakeLists.txt  Vectors.h
DatEngine/Engine/Maths/: CMakeLists.txt  CommonMaths.h  Matrix.h  Quaternion.h  Rotator.h  Vector.h  Vector2D.h  Vector4D.h
DatEngine/Engine/Maths/Matrices/: Mat4x4.h  MatForward.h  MatMaths.h
DatEngine/Engine/Maths/Matrices/Source/: Matrix.inl  MatrixMaths.inl
DatEngine/Engine/Maths/Quaternions/: QuatForward.h
DatEngine/Engine/Maths/Quaternions/Source/: QuatMaths.inl  Quaternion.inl
DatEngine/Engine/Maths/Rotators/: RotForward.h
DatEngine/Engine/Maths/Rotators/Source/: Rotator.inl
DatEngine/Engine/Maths/Source/: Vec.cpp  Vec3.inl  Vector.cpp
DatEngine/Engine/Maths/Vectors/: CommonVecMaths.h  Vec2.h  Vec3.h  Vec4.h  VecForward.h  VecMaths.h  VectorForward.h
DatEngine/Engine/Maths/Vectors/Double/: DVector.h  DVector2D.h  DVector4D.h
DatEngine/Engine/Maths/Vectors/Float/: FVector.h  FVector2D.h  FVector4D.h
DatEngine/Engine/Maths/Vectors/Int/: IVector.h  IVector2D.h  IVector4D.h
DatEngine/Engine/Maths/Vectors/Source/: Vec2.inl  Vec3.inl  Vec4.inl
DatEngine/Engine/Mesh/: CMakeLists.txt
DatEngine/Engine/Mesh/Primitives/: Vertex.h
DatEngine/Engine/Platform/: CMakeLists.txt  Timing.h
DatEngine/Engine/Platform/Poisx/: CMakeLists.txt
DatEngine/Engine/Platform/Poisx/Source/: FileUtilities.cpp  Timing.cpp
DatEngine/Engine/Platform/Posix/Source/: FileUtilities.cpp  Timing.cpp
DatEngine/Engine/Platform/Windows/: CMakeLists.txt
DatEngine/Engine/Platform/Windows/Source/: FileUtilities.cpp  Timing.cpp
DatEngine/Engine/Rendering/: CMakeLists.txt  Renderer.h
DatEngine/Engine/Rendering/Vulkan/: VulkanRenderer.h
DatEngine/Engine/Rendering/Vulkan/Source/: VulkanRenderer.cpp
DatEngine/Engine/Utilities/: CMakeLists.txt  Console.h  FileUtilities.h  Logging.h  Timing.h
DatEngine/Engine/Utilities/Exceptions/: UnknownResourceFactoryException.h
DatEngine/Engine/Utilities/Source/: FileUtilities.cpp  Timing.cpp
DatEngine/FirstParty/: CMakeLists.txt
DatEngine/Rendering/: Renderer.h
DatEngine/Rendering/OpenGL/Source/: glad.c
DatEngine/Rendering/Vulkan/: CMakeLists.txt  VulkanRenderer.h
DatEngine/Rendering/Vulkan/Source/: VulkanRenderer.cpp
DatEngine/Rendering/Window/: DatWindow.h
DatEngine/Resources/Shaders/GLSL/: Fresnel.frag  compile.bat
DatEngine/Test/: test.cpp
(+26 files in other folders)
