# Reflection
target_sources (DatEngine 
				PUBLIC
					"ReflectionMacros.h")

# Subdirectories
add_subdirectory ("AssetManager")
add_subdirectory ("Config")
add_subdirectory ("DataUtils")
add_subdirectory ("Mesh")
add_subdirectory ("Maths")
add_subdirectory ("Rendering")
add_subdirectory ("Utilities")